--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       <meta name="description" content="New SmileBASIC Source">
       <link data-favicon rel="shortcut icon" href="favicon.ico">
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1604279992" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1604279992"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1604279992"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1604301066" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1604301066"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1604301066"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1604279992"></script>
-      <script src="template.js?v=1604279992"></script>
-      <script src="dom.js?v=1604279992"></script>
-      <script src="api.js?v=1604279992"></script>
-      <script src="index.js?v=1604279992"></script>
-      <script src="sbs2-markup/highlight.js?v=1604279992"></script>
-      <script src="sbs2-markup/parse.js?v=1604279992"></script>
-      <script src="sbs2-markup/render.js?v=1604279992"></script>
+      <script src="libbo.js?v=1604301066"></script>
+      <script src="template.js?v=1604301066"></script>
+      <script src="dom.js?v=1604301066"></script>
+      <script src="api.js?v=1604301066"></script>
+      <script src="index.js?v=1604301066"></script>
+      <script src="sbs2-markup/highlight.js?v=1604301066"></script>
+      <script src="sbs2-markup/parse.js?v=1604301066"></script>
+      <script src="sbs2-markup/render.js?v=1604301066"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1604279992" />
+      <link rel="stylesheet" href="index.css?v=1604301066" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -764,7 +764,7 @@ function leftpaneclick(event)
       <template id="templates2">
          <!-- Same as before, but some things will have data-thing="*" -->
          <li id="log" class="uk-flex uk-text-break">
-            <span t-message=".textContent" t-level=".loglevel" class="uk-width-expand logmessage"></span>
+            <span t-message=".textContent" t-level="data-loglevel" class="uk-width-expand logmessage"></span>
             <time t-time=".textContent"></time>
          </li>
       </template>
