Fixed unnecessary long poller aborts

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ function leftpaneclick(event)
          </ul>
          <div id="discussionuser" class="uk-flex-none">
             <img t-avatar="src" width=40>
-            <div uk-dropdown="boundary: #website; pos: bottom-right;" class="userdropdown">
+            <div uk-dropdown="boundary: #website; pos: bottom-left;" class="userdropdown">
                <a t-userlink=".spahref()" class="username" t-username=".textContent"></a>
                <div class="uk-flex uk-flex-middle userdata">
                   <span class="userid uk-margin-small-right" t-id=".textContent"></span>
