Perska helped fix the date merge bug

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1604471995" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1604471995"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1604471995"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1604555938" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1604555938"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1604555938"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1604471995"></script>
-      <script src="template.js?v=1604471995"></script>
-      <script src="dom.js?v=1604471995"></script>
-      <script src="api.js?v=1604471995"></script>
-      <script src="index.js?v=1604471995"></script>
-      <script src="sbs2-markup/highlight.js?v=1604471995"></script>
-      <script src="sbs2-markup/parse.js?v=1604471995"></script>
-      <script src="sbs2-markup/render.js?v=1604471995"></script>
+      <script src="libbo.js?v=1604555938"></script>
+      <script src="template.js?v=1604555938"></script>
+      <script src="dom.js?v=1604555938"></script>
+      <script src="api.js?v=1604555938"></script>
+      <script src="index.js?v=1604555938"></script>
+      <script src="sbs2-markup/highlight.js?v=1604555938"></script>
+      <script src="sbs2-markup/parse.js?v=1604555938"></script>
+      <script src="sbs2-markup/render.js?v=1604555938"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1604471995" />
+      <link rel="stylesheet" href="index.css?v=1604555938" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -862,7 +862,7 @@ function leftpaneclick(event)
                <a href="#" data-loadmore class="uk-text-meta">Load older</a>
             </div>
             <p data-nocomments class="uk-text-meta uk-padding-small uk-text-center
-               uk-width-expand">No comments (yet!)</p>
+               uk-width-expand" hidden>No comments (yet!)</p>
             <!-- A placeholder, so inserting will always have a place to stop searching -->
             <div data-tmpl="messageframe" data-tmpld='{"userid":"0"}' style="display: none">
                <div data-tmpl="singlemessage" data-tmpld='{"messageid":"0"}'>
